# nolatabs-backend

./: .gitignore  Cargo.toml  Dockerfile  compose.yaml  main.tf
.aws/: nolatabs-revision1.json
.github/workflows/: aws.yml  rust.yml
.sqlx/: query-6d1df18ff2de5a4f4e3c1d609cbc9b394128c92005d77b2de23a25e245cb3925.json  query-a67b196fbb968b6e32b981bd57a228963fc013e9061507ab5fcb7e07314bc343.json  query-ca0058913a280318468ff564a8514c843a9244fb3a90521ed818406967193d61.json  query-d0a80067cb1432353e63505ddc540011146370938cfa9ba2a6530402daca3416.json  query-f27af33051d432ce05226f950d3d53e7ef4e3d2ff287ddfbfb5bdf031c01fe8f.json
bash_scripts/: add_this_pc_to_security_rules.sh  get_db_url.sh  set_email_verified.sh  signin_firebase.sh  signup_firebase.sh  update_s3.sh  verify_email_firebase.sh
documentation/: openapi.yaml  structure.mermaid
documentation/components/request-bodies/: auth.yaml
documentation/components/schemas/: account.yaml  repository.yaml  user.yaml
documentation/handlers/: account.yaml  auth.yaml  commits.yaml  repositories.yaml
migrations/: 20251025022546_init.down.sql  20251025022546_init.up.sql  20260108124444_paid_until_instead_of_amount.down.sql  20260108124444_paid_until_instead_of_amount.up.sql  20260108151346_commit_parents_bugfix.down.sql  20260108151346_commit_parents_bugfix.up.sql  20260108153845_commit_author.down.sql  20260108153845_commit_author.up.sql  20260108161512_unicast_reader_delete.down.sql  20260108161512_unicast_reader_delete.up.sql  20260110152203_username.down.sql  20260110152203_username.up.sql
src/: main.rs  state.rs
src/handlers/: account.rs  auth.rs  error.rs  login.rs  middleware.rs  mod.rs  status.rs
src/logic/: auth.rs  error.rs  mod.rs  payment.rs  user.rs
src/models/: account.rs  mod.rs  repository.rs  user.rs
src/repository/: error.rs  mod.rs  payment_log.rs  repository.rs  settings.rs  subscription.rs  user.rs
src/tests/api/: common.rs  integration_test.rs  mod.rs
