[package]
name = "nolatabs-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.8"
aws-sdk-s3 = "1.108.0"
axum = { version = "0.8.4", features = ["macros"] }
dotenvy = "0.15.7"
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["full"]}
tracing-subscriber = "0.3.20"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "migrate", "chrono" ] }
firebase-auth = "0.5.1"
fars = "0.2.0"
reqwest = "0.12.24"
