[package]
name = "nolatabs-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.8"
aws-sdk-secretsmanager = "1.98.0"
aws-sdk-s3 = "1.108.0"
axum = { version = "0.8.4", features = ["macros", "tokio"] }
tower = "0.5.2"
tower-http = {version = "0.6.2", features = ["trace"] }
dotenvy = "0.15.7"
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["full"]}
tracing-subscriber = { version = "0.3.20", features = ["fmt", "json", "env-filter", "registry"] }
serde = "1.0.228"
serde_json = "1.0.145"
chrono = { version = "0.4.26", features = ["serde"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "migrate", "chrono", "uuid" ] }
firebase-auth = "0.5.1"
fars = "0.2.0"
reqwest = { version = "0.12.24", features = ["json"] }
uuid = { version = "1.19.0", features = ["v4"] }
urlencoding = "2.1.3"
lazy_static = "1.5.0"
tracing = "0.1.44"
thiserror = "2.0.18"

[features]
integration-test = []
